fix: fix invoke non-http-trigger function problem
add ability to invoke non-http-trigger function

--- a/example/event-function/s.yaml
+++ b/example/event-function/s.yaml
@@ -23,3 +23,15 @@ services:
         instanceType: e1
         environmentVariables:
           testEnv: true
+      triggers:
+        - name: ossTrigger
+          type: oss
+          config:
+            bucketName: fassdemo
+            events:
+              - oss:ObjectCreated:*
+              - oss:ObjectRemoved:DeleteObject
+            filter:
+              Key:
+                Prefix: source/
+                Suffix: .png
