--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "npm run watch",
     "watch": "tsc -w",
     "publish": "npm run build && s cli platform publish",
-    "build": "npm run doc && tsc",
+    "build": "rm -r node_modules && rm -r package-lock.json && npm i && ex -sc '15i|//@ts-ignore' -cx node_modules/draftlog/index.d.ts  && npm run doc && tsc",
     "postbuild": "npm run doc",
     "doc": "npx typedoc src/index.ts --json doc/doc.json --out doc"
   },
