--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fc-local-invoke",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "This is a component demo for Serverless Devs Tool ",
   "keywords": [
     "Serverless",
@@ -25,7 +25,7 @@
     "start": "npm run watch",
     "watch": "tsc -w",
     "publish": "npm run build && s cli platform publish",
-    "build": "rm -r node_modules && rm -r package-lock.json && npm i && ex -sc '15i|//@ts-ignore' -cx node_modules/draftlog/index.d.ts  && npm run doc && tsc",
+    "build": "rm -rf node_modules && rm -rf package-lock.json && npm i && ex -sc '15i|//@ts-ignore' -cx node_modules/draftlog/index.d.ts  && npm run doc && tsc",
     "postbuild": "npm run doc",
     "doc": "npx typedoc src/index.ts --json doc/doc.json --out doc"
   },
