--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fc-local-invoke",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "description": "This is a component demo for Serverless Devs Tool ",
   "keywords": [
     "Serverless",
@@ -77,11 +77,10 @@
     "@types/node": "^14.0.23",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
+    "@vercel/ncc": "^0.24.0",
     "eslint": "^7.7.0",
-    "ts-node": "^8.10.2",
-    "typedoc": "^0.20.35",
-    "typescript": "^4.4.2",
     "f2elint": "^1.2.0",
-    "@vercel/ncc": "^0.24.0"
+    "ts-node": "^8.10.2",
+    "typescript": "^4.4.2"
   }
 }
