--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@alicloud/fc2": "^2.2.2",
-    "@serverless-devs/core": "^0.0.*",
+    "@serverless-devs/core": "latest",
     "async-lock": "^1.3.0",
     "cheerio": "^1.0.0-rc.9",
     "detect-mocha": "^0.1.0",
@@ -58,18 +58,8 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "rimraf": "^3.0.2",
-    "string-argv": "^0.3.1",
-    "tar-fs": "^2.1.1",
     "temp-dir": "^2.0.0",
     "uuid": "^8.3.2"
-  },
-  "fc-docker": {
-    "version": "1.9.21",
-    "registry_default": "registry.cn-beijing.aliyuncs.com",
-    "registry_mirrors": [
-      "registry.cn-beijing.aliyuncs.com",
-      "registry.hub.docker.com"
-    ]
   },
   "devDependencies": {
     "@types/eslint": "^7.2.6",
