--- a/publish.yaml
+++ b/publish.yaml
@@ -2,7 +2,7 @@ Type: Component
 Name: fc-local-invoke
 Provider:
   - 其它
-Version: dev
+Version: 0.0.24
 Description: 初始化component模板
 HomePage: https://www.serverless-devs.com
 Tags: #标签详情
