--- a/.signore
+++ b/.signore
@@ -1,7 +1,30 @@
 node_modules
 .s
-tsconfig.json
 LICENSE
-package-lok.json
+package-lock.json
 .prettierrc.js
+.prettierignore
+.eslintrc.js
+.eslintignore
+.editorconfig
 .gitignore
+.signore
+
+.github
+.idea
+.vscode
+.DS_Store
+.git
+
+README.md
+readme.md
+./example
+./test
+./src
+./Makefile
+./f2elint.config.js
+./commitlint.config.js
+jest.config.ts
+jest.setup.ts
+tsconfig.json
+tsconfig.base.json
