--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "autoInstall": false,
   "scripts": {
+    "preln": "rm -rf ~/.s/components/devsapp.cn/devsapp/fc-local-invoke/dist",
+    "ln": "ln -s $(pwd)/dist ~/.s/components/devsapp.cn/devsapp/fc-local-invoke/dist",
     "start": "npm run prebuild && npm run watch",
     "watch": "tsc -w",
     "prebuild": "npm i rimraf && rimraf package-lock.json && rimraf dist && rimraf node_modules && npm i && ex -sc '15i|//@ts-ignore' -cx node_modules/draftlog/index.d.ts",
